# agentic-event-store

./: AGENTS.md  README.md  main.py  pyproject.toml
docs/: DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  INTERIM_REPORT.md  TRP1 Challenge Week 5_ Agentic Event Store & Enterprise Audit Infrastructure (2).md
scripts/: demo_full_lifecycle.py
src/: event_store.py  schema.sql
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: __init__.py  handlers.py
src/integrity/: __init__.py  audit_chain.py  gas_town.py
src/mcp/: __init__.py  resources.py  server.py  tools.py
src/models/: events.py
src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/regulatory/: __init__.py  package.py
src/upcasting/: __init__.py  registry.py  upcasters.py
src/what_if/: __init__.py  projector.py
tests/: conftest.py  test_concurrency.py  test_gas_town.py  test_handlers.py  test_mcp_lifecycle.py  test_phase6_bonus.py  test_projections.py  test_upcasting.py
