[project]
name = "trp1-ledger"
version = "0.1.0"
description = "Agentic Event Store & Enterprise Audit Infrastructure — immutable memory and governance backbone for multi-agent AI systems at production scale."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.7",
    "structlog>=24.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.0",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.0",
    "testcontainers[postgres]>=4.0",
]
